MicroTriggerFramework/main/default/objects/MicroTrigger__mdt/MicroTrigger__mdt.object-meta.xml
<CustomObject>
    <label>MicroTrigger</label>
    <pluralLabel>MicroTriggers</pluralLabel>
</CustomObject>