MicroTriggerFramework/main/default/objects/MicroTrigger__mdt/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Insert</fullName>
                <default>true</default>
                <label>Before Insert</label>
            </value>
            <value>
                <fullName>After Insert</fullName>
            </value>
            <value>
                <fullName>Before Update</fullName>
            </value>
            <value>
                <fullName>After Update</fullName>
            </value>
            <value>
                <fullName>Before Delete</fullName>
            </value>
            <value>
                <fullName>After Delete</fullName>
            </value>
            <value>
                <fullName>After Undelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>