MicroTriggerFramework/main/default/objects/MicroTrigger__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>