MicroTriggerFramework/main/default/objects/MicroTrigger__mdt/fields/OrderOfExecution__c.field-meta.xml
<CustomField>
    <fullName>OrderOfExecution__c</fullName>
    <label>Order Of Execution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>