MicroTriggerFramework/main/default/objects/MicroTrigger__mdt/fields/PreventRecursive__c.field-meta.xml
<CustomField>
    <fullName>PreventRecursive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this field is checked, the MicroTrigger Actions will run only one</description>
    <label>Prevent Recursive</label>
    <type>Checkbox</type>
</CustomField>