MicroTriggerFramework/main/default/objects/MicroTrigger__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>SObject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>MicroTriggerTestingMock__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>